// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`app stacks > synthesizes the expected prod template 1`] = `
{
  "Outputs": {
    "DistributionDomainName": {
      "Description": "CloudFront domain, the alias target for the stage domain",
      "Value": {
        "Fn::GetAtt": [
          "Distribution830FAC52",
          "DomainName",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuefootballblackjackprodcertificatearnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/football-blackjack/prod/certificate-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuefootballblackjackproddomainnameC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/football-blackjack/prod/domain-name",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuefootballblackjackprodhostedzoneidC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/football-blackjack/prod/hosted-zone-id",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiFunctionCE271BD4": {
      "DependsOn": [
        "ApiFunctionServiceRole52B9747B",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "ASSET-HASH.jar",
        },
        "Handler": "com.adamnfish.fbj.api.ApiLambda::handleRequest",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "ApiFunctionLogs0D7A2434",
          },
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "ApiFunctionServiceRole52B9747B",
            "Arn",
          ],
        },
        "Runtime": "java21",
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "prod",
          },
        ],
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ApiFunctionLogs0D7A2434": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 30,
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "prod",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ApiFunctionServiceRole52B9747B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "prod",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536": {
      "DependsOn": [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "ASSET-HASH.zip",
        },
        "Environment": {
          "Variables": {
            "AWS_CA_BUNDLE": "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "PublishWebrootAwsCliLayer6445B702",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "prod",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "prod",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "Webroot6DACC511",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "Webroot6DACC511",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "Roles": [
          {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Distribution830FAC52": {
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            {
              "Ref": "SsmParameterValuefootballblackjackproddomainnameC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
          ],
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "b689b0a8-53d0-40ab-baf2-68738e2966ac",
              "PathPattern": "/api/*",
              "TargetOriginId": "FootballBlackjackprodDistributionOrigin22A19504A",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "FunctionAssociations": [
              {
                "EventType": "viewer-request",
                "FunctionARN": {
                  "Fn::GetAtt": [
                    "SpaRewrite1C145184",
                    "FunctionARN",
                  ],
                },
              },
            ],
            "TargetOriginId": "FootballBlackjackprodDistributionOrigin1D58666F1",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "Webroot6DACC511",
                  "RegionalDomainName",
                ],
              },
              "Id": "FootballBlackjackprodDistributionOrigin1D58666F1",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "DistributionOrigin1S3OriginAccessControlEB606076",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
            {
              "CustomOriginConfig": {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::Select": [
                  2,
                  {
                    "Fn::Split": [
                      "/",
                      {
                        "Fn::GetAtt": [
                          "HttpApiF5A9A8A7",
                          "ApiEndpoint",
                        ],
                      },
                    ],
                  },
                ],
              },
              "Id": "FootballBlackjackprodDistributionOrigin22A19504A",
            },
          ],
          "ViewerCertificate": {
            "AcmCertificateArn": {
              "Ref": "SsmParameterValuefootballblackjackprodcertificatearnC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "MinimumProtocolVersion": "TLSv1.2_2021",
            "SslSupportMethod": "sni-only",
          },
        },
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "prod",
          },
        ],
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "DistributionOrigin1S3OriginAccessControlEB606076": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "FootballBlackjackprodDistribOrigin1S3OriginAccessControl4332F972",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "DnsRecords": {
      "Properties": {
        "HostedZoneId": {
          "Ref": "SsmParameterValuefootballblackjackprodhostedzoneidC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "RecordSets": [
          {
            "AliasTarget": {
              "DNSName": {
                "Fn::GetAtt": [
                  "Distribution830FAC52",
                  "DomainName",
                ],
              },
              "HostedZoneId": "Z2FDTNDATAQYW2",
            },
            "Name": {
              "Ref": "SsmParameterValuefootballblackjackproddomainnameC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "Type": "A",
          },
          {
            "AliasTarget": {
              "DNSName": {
                "Fn::GetAtt": [
                  "Distribution830FAC52",
                  "DomainName",
                ],
              },
              "HostedZoneId": "Z2FDTNDATAQYW2",
            },
            "Name": {
              "Ref": "SsmParameterValuefootballblackjackproddomainnameC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "Type": "AAAA",
          },
        ],
      },
      "Type": "AWS::Route53::RecordSetGroup",
    },
    "HttpApiDefaultStage3EEB07D6": {
      "Properties": {
        "ApiId": {
          "Ref": "HttpApiF5A9A8A7",
        },
        "AutoDeploy": true,
        "StageName": "$default",
        "Tags": {
          "app": "football-blackjack",
          "stage": "prod",
        },
      },
      "Type": "AWS::ApiGatewayV2::Stage",
    },
    "HttpApiF5A9A8A7": {
      "Properties": {
        "Name": "HttpApi",
        "ProtocolType": "HTTP",
        "Tags": {
          "app": "football-blackjack",
          "stage": "prod",
        },
      },
      "Type": "AWS::ApiGatewayV2::Api",
    },
    "HttpApiPOSTapioperation67AACCFF": {
      "Properties": {
        "ApiId": {
          "Ref": "HttpApiF5A9A8A7",
        },
        "AuthorizationType": "NONE",
        "RouteKey": "POST /api/{operation}",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "HttpApiPOSTapioperationApiIntegration8D246937",
              },
            ],
          ],
        },
      },
      "Type": "AWS::ApiGatewayV2::Route",
    },
    "HttpApiPOSTapioperationApiIntegration8D246937": {
      "Properties": {
        "ApiId": {
          "Ref": "HttpApiF5A9A8A7",
        },
        "IntegrationType": "AWS_PROXY",
        "IntegrationUri": {
          "Fn::GetAtt": [
            "ApiFunctionCE271BD4",
            "Arn",
          ],
        },
        "PayloadFormatVersion": "2.0",
      },
      "Type": "AWS::ApiGatewayV2::Integration",
    },
    "HttpApiPOSTapioperationApiIntegrationPermission3669F824": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "ApiFunctionCE271BD4",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "HttpApiF5A9A8A7",
              },
              "/*/*/api/{operation}",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PublishWebrootAwsCliLayer6445B702": {
      "Properties": {
        "Content": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "ASSET-HASH.zip",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "PublishWebrootCustomResource74A7D1FC": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketName": {
          "Ref": "Webroot6DACC511",
        },
        "DistributionId": {
          "Ref": "Distribution830FAC52",
        },
        "DistributionPaths": [
          "/*",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
        ],
        "SourceObjectKeys": [
          "ASSET-HASH.zip",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaRewrite1C145184": {
      "Properties": {
        "AutoPublish": true,
        "FunctionCode": "function handler(event) {
  var request = event.request;
  var uri = request.uri;
  if (uri !== "/api" && !uri.startsWith("/api/") && !uri.includes(".")) {
    request.uri = "/index.html";
  }
  return request;
}",
        "FunctionConfig": {
          "Comment": {
            "Fn::Join": [
              "",
              [
                {
                  "Ref": "AWS::Region",
                },
                "FootballBlackjackprodSpaRewriteB43C1249",
              ],
            ],
          },
          "Runtime": "cloudfront-js-2.0",
        },
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "AWS::Region",
              },
              "FootballBlackjackprodSpaRewriteB43C1249",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "prod",
          },
        ],
      },
      "Type": "AWS::CloudFront::Function",
    },
    "Webroot6DACC511": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "aws-cdk:cr-owned:9f2530ad",
            "Value": "true",
          },
          {
            "Key": "stage",
            "Value": "prod",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "WebrootPolicy39C2991D": {
      "Properties": {
        "Bucket": {
          "Ref": "Webroot6DACC511",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "Webroot6DACC511",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "Webroot6DACC511",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "Distribution830FAC52",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "Webroot6DACC511",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`app stacks > synthesizes the expected test template 1`] = `
{
  "Outputs": {
    "DistributionDomainName": {
      "Description": "CloudFront domain, the alias target for the stage domain",
      "Value": {
        "Fn::GetAtt": [
          "Distribution830FAC52",
          "DomainName",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuefootballblackjacktestcertificatearnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/football-blackjack/test/certificate-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuefootballblackjacktestdomainnameC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/football-blackjack/test/domain-name",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuefootballblackjacktesthostedzoneidC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/football-blackjack/test/hosted-zone-id",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiFunctionCE271BD4": {
      "DependsOn": [
        "ApiFunctionServiceRole52B9747B",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "ASSET-HASH.jar",
        },
        "Handler": "com.adamnfish.fbj.api.ApiLambda::handleRequest",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "ApiFunctionLogs0D7A2434",
          },
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "ApiFunctionServiceRole52B9747B",
            "Arn",
          ],
        },
        "Runtime": "java21",
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "test",
          },
        ],
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ApiFunctionLogs0D7A2434": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 30,
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "test",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ApiFunctionServiceRole52B9747B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536": {
      "DependsOn": [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "ASSET-HASH.zip",
        },
        "Environment": {
          "Variables": {
            "AWS_CA_BUNDLE": "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "PublishWebrootAwsCliLayer6445B702",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "test",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "Webroot6DACC511",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "Webroot6DACC511",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "Roles": [
          {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Distribution830FAC52": {
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            {
              "Ref": "SsmParameterValuefootballblackjacktestdomainnameC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
          ],
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "b689b0a8-53d0-40ab-baf2-68738e2966ac",
              "PathPattern": "/api/*",
              "TargetOriginId": "FootballBlackjacktestDistributionOrigin26351B272",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "FunctionAssociations": [
              {
                "EventType": "viewer-request",
                "FunctionARN": {
                  "Fn::GetAtt": [
                    "SpaRewrite1C145184",
                    "FunctionARN",
                  ],
                },
              },
            ],
            "TargetOriginId": "FootballBlackjacktestDistributionOrigin18B4F7B26",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "Webroot6DACC511",
                  "RegionalDomainName",
                ],
              },
              "Id": "FootballBlackjacktestDistributionOrigin18B4F7B26",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "DistributionOrigin1S3OriginAccessControlEB606076",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
            {
              "CustomOriginConfig": {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::Select": [
                  2,
                  {
                    "Fn::Split": [
                      "/",
                      {
                        "Fn::GetAtt": [
                          "HttpApiF5A9A8A7",
                          "ApiEndpoint",
                        ],
                      },
                    ],
                  },
                ],
              },
              "Id": "FootballBlackjacktestDistributionOrigin26351B272",
            },
          ],
          "ViewerCertificate": {
            "AcmCertificateArn": {
              "Ref": "SsmParameterValuefootballblackjacktestcertificatearnC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "MinimumProtocolVersion": "TLSv1.2_2021",
            "SslSupportMethod": "sni-only",
          },
        },
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "test",
          },
        ],
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "DistributionOrigin1S3OriginAccessControlEB606076": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "FootballBlackjacktestDistribOrigin1S3OriginAccessControl5A02DEB5",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "DnsRecords": {
      "Properties": {
        "HostedZoneId": {
          "Ref": "SsmParameterValuefootballblackjacktesthostedzoneidC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "RecordSets": [
          {
            "AliasTarget": {
              "DNSName": {
                "Fn::GetAtt": [
                  "Distribution830FAC52",
                  "DomainName",
                ],
              },
              "HostedZoneId": "Z2FDTNDATAQYW2",
            },
            "Name": {
              "Ref": "SsmParameterValuefootballblackjacktestdomainnameC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "Type": "A",
          },
          {
            "AliasTarget": {
              "DNSName": {
                "Fn::GetAtt": [
                  "Distribution830FAC52",
                  "DomainName",
                ],
              },
              "HostedZoneId": "Z2FDTNDATAQYW2",
            },
            "Name": {
              "Ref": "SsmParameterValuefootballblackjacktestdomainnameC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "Type": "AAAA",
          },
        ],
      },
      "Type": "AWS::Route53::RecordSetGroup",
    },
    "HttpApiDefaultStage3EEB07D6": {
      "Properties": {
        "ApiId": {
          "Ref": "HttpApiF5A9A8A7",
        },
        "AutoDeploy": true,
        "StageName": "$default",
        "Tags": {
          "app": "football-blackjack",
          "stage": "test",
        },
      },
      "Type": "AWS::ApiGatewayV2::Stage",
    },
    "HttpApiF5A9A8A7": {
      "Properties": {
        "Name": "HttpApi",
        "ProtocolType": "HTTP",
        "Tags": {
          "app": "football-blackjack",
          "stage": "test",
        },
      },
      "Type": "AWS::ApiGatewayV2::Api",
    },
    "HttpApiPOSTapioperation67AACCFF": {
      "Properties": {
        "ApiId": {
          "Ref": "HttpApiF5A9A8A7",
        },
        "AuthorizationType": "NONE",
        "RouteKey": "POST /api/{operation}",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "HttpApiPOSTapioperationApiIntegration8D246937",
              },
            ],
          ],
        },
      },
      "Type": "AWS::ApiGatewayV2::Route",
    },
    "HttpApiPOSTapioperationApiIntegration8D246937": {
      "Properties": {
        "ApiId": {
          "Ref": "HttpApiF5A9A8A7",
        },
        "IntegrationType": "AWS_PROXY",
        "IntegrationUri": {
          "Fn::GetAtt": [
            "ApiFunctionCE271BD4",
            "Arn",
          ],
        },
        "PayloadFormatVersion": "2.0",
      },
      "Type": "AWS::ApiGatewayV2::Integration",
    },
    "HttpApiPOSTapioperationApiIntegrationPermission3669F824": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "ApiFunctionCE271BD4",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "HttpApiF5A9A8A7",
              },
              "/*/*/api/{operation}",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PublishWebrootAwsCliLayer6445B702": {
      "Properties": {
        "Content": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "ASSET-HASH.zip",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "PublishWebrootCustomResource74A7D1FC": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketName": {
          "Ref": "Webroot6DACC511",
        },
        "DistributionId": {
          "Ref": "Distribution830FAC52",
        },
        "DistributionPaths": [
          "/*",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
        ],
        "SourceObjectKeys": [
          "ASSET-HASH.zip",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaRewrite1C145184": {
      "Properties": {
        "AutoPublish": true,
        "FunctionCode": "function handler(event) {
  var request = event.request;
  var uri = request.uri;
  if (uri !== "/api" && !uri.startsWith("/api/") && !uri.includes(".")) {
    request.uri = "/index.html";
  }
  return request;
}",
        "FunctionConfig": {
          "Comment": {
            "Fn::Join": [
              "",
              [
                {
                  "Ref": "AWS::Region",
                },
                "FootballBlackjacktestSpaRewriteD282E00F",
              ],
            ],
          },
          "Runtime": "cloudfront-js-2.0",
        },
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "AWS::Region",
              },
              "FootballBlackjacktestSpaRewriteD282E00F",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "stage",
            "Value": "test",
          },
        ],
      },
      "Type": "AWS::CloudFront::Function",
    },
    "Webroot6DACC511": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "app",
            "Value": "football-blackjack",
          },
          {
            "Key": "aws-cdk:cr-owned:3c51b3f6",
            "Value": "true",
          },
          {
            "Key": "stage",
            "Value": "test",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "WebrootPolicy39C2991D": {
      "Properties": {
        "Bucket": {
          "Ref": "Webroot6DACC511",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "Webroot6DACC511",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "Webroot6DACC511",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "Distribution830FAC52",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "Webroot6DACC511",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
